fill templates content and added missing images

--- a/templates/storage.page.tmpl
+++ b/templates/storage.page.tmpl
@@ -1,5 +1,28 @@
 {{template "base" .}}
 
 {{define "content"}}
-
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <img src="/static/images/small-storage.png" class="img-fluid img-thumbnail mx-auto d-block room-image"
+                alt="">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <h1 class="text-center mt-4">Welcome to storage</h1>
+            <p>
+                Some text just to be here and we can repeate it 1 times
+                Some text just to be here and we can repeate it 2 times
+                Some text just to be here and we can repeate it 3 times
+                Some text just to be here and we can repeate it 4 times
+            </p>
+            <div class="row">
+                <div class="col text-center">
+                    <a href="make-reservation-ss" class="btn btn-success">Check Availability</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {{end}}
