--- a/templates/search-availability.page.tmpl
+++ b/templates/search-availability.page.tmpl
@@ -1,5 +1,32 @@
 {{template "base" .}}
 
 {{define "content"}}
-
+<div class="container">
+    <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
+            <h1 class="mt-5">Serch for Availability</h1>
+            <form action="reservation.html" method="get" novalidate class="needs-validation">
+                <div class="row gx-3">
+                    <div class="col-md-6">
+                        <div id="reservation-dates">
+                            <input type="text" name="start" class="form-control mb-3" required
+                                placeholder="Arrival">
+                            <input type="text" name="end" class="form-control" required placeholder="Departure">
+                        </div>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary mt-3">Search Availability</button>
+            </form>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <p id="myParagraph">This is some text.</p>
+            <p>
+                <button class="btn btn-outline-secondary" id="colorButton">Click Me</button>
+            </p>
+        </div>
+    </div>
+</div>
 {{end}}
