--- a/templates/search-availability.page.tmpl
+++ b/templates/search-availability.page.tmpl
@@ -20,13 +20,15 @@
             </form>
         </div>
     </div>
-    <div class="row">
-        <div class="col">
-            <p id="myParagraph">This is some text.</p>
-            <p>
-                <button class="btn btn-outline-secondary" id="colorButton">Click Me</button>
-            </p>
-        </div>
-    </div>
 </div>
+{{end}}
+
+{{define "js"}}
+<script>
+    const elem = document.getElementById("reservation-dates");
+        const rangepicker = new DateRangePicker(elem, {
+            buttonClass: "btn",
+            format: "dd-mm-yyyy",
+        });
+</script>
 {{end}}
